# opencv-classifiers

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  base64_utils.hpp  benchmark  benchmark.cpp  benchmark.py  classifiers_test  classify_handler.cpp  classify_handler.hpp  classify_mapper.hpp  classify_mapping.cpp  cmake_install.cmake  cnn_svm.hpp  common.hpp  config.cpp  config.h  config.hpp  config.json  config.yaml  cors_middleware.cpp  cors_middleware.hpp  data.cpp  data.hpp  error_middleware.cpp  error_middleware.hpp  get_yolo.py  handler_factory.cpp  handler_factory.hpp  history.cpp  history.hpp  history_handler.cpp  history_handler.hpp  hog_svm.hpp  (+41 more)
benchmark/: groceries_labels.txt
learning/: cmake_install.cmake  dataset_groceries.ipynb  groceries_dataset.ipynb  hog_svm.ipynb  learn-cnn-svm.ipynb  learn_finetune_cnn.ipynb  learn_finetune_cnn_cifar.ipynb  learn_rf.ipynb  smallnet.ipynb  svm.ipynb  test.py
lib/: classifiers.py
models/: sift_kmeans_svm_groceries_centers.npy
scripts/: load-models.py
web/: 404.html  index.html  statements.html
web/css/: chart.css  index.css
web/js/: chart.js  index.js  upload.js
web/js/statements/: index.js  statement.js
